syntax = "proto3";
package pb;

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
}

message Auth {
  string id = 1;
  repeated string roles = 2;
}

message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
  string passwordConf = 6;
}

message RegisterResponse {
  Auth user = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  Auth user = 1;
}

message EmptyRequest {}

message GetUsersResponse {
  repeated User users = 1;
}

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc GetUsers (EmptyRequest) returns (GetUsersResponse) {}
}